--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<img src="https://media3.giphy.com/media/GATJI5PRiG0jQ6hOvD/giphy.gif?cid=ecf05e47xhheba4i3j8h994o9w9a9r1ur6bo3hn1lm3razis&rid=giphy.gif&ct=g" width="100%" height="100%" />
+<img src="blockchain.gif" width="100%" height="100%" />
 
 
 </body>
