--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Blockchain Basel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+
 <body>
+  <div class="col-3 right">
+  <a href="https://drive.google.com/uc?export=view&id=16NdTaJRM-kTxWa71kJVuRATrKYXnndWu"><img src="https://drive.google.com/uc?export=view&id=16NdTaJRM-kTxWa71kJVuRATrKYXnndWu" style="width: 100%; max-width: 100%; height: auto" title="Click for the larger version." /></a>
 
-<img src="blockchain.gif" width="100%" height="100%" />
-
-
+  </div>
 </body>
+
 </html>
