--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 
 <body>
-  <div class="col-3 right">
-  <a href="https://drive.google.com/uc?export=view&id=16NdTaJRM-kTxWa71kJVuRATrKYXnndWu"><img src="https://drive.google.com/uc?export=view&id=16NdTaJRM-kTxWa71kJVuRATrKYXnndWu" style="width: 100%; max-width: 100%; height: auto" title="Click for the larger version." /></a>
+  <img src="https://drive.google.com/uc?export=view&id=16NdTaJRM-kTxWa71kJVuRATrKYXnndWu" style="width: 100%; max-width: 100%; height: auto"/>
 
   </div>
 </body>
